modified:   .gitmodules 	new file:   .vim/.netrwhist 	new file:   .vim/rc/dein.toml 	new file:   .vim/rc/dein_lazy.toml 	new file:   .vimrc 	modified:   setup.sh 	new file:   submodules/dein.vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/prezto"]
 	path = submodules/prezto
 	url = https://github.com/duc77ape/prezto.git
+[submodule "submodules/dein.vim"]
+	path = submodules/dein.vim
+	url = https://github.com/Shougo/dein.vim.git
