--- a/config/sway/config
+++ b/config/sway/config
@@ -17,7 +17,7 @@ set $right l
 set $term termite
 # Your preferred application launcher
 # Note: it's recommended that you pass the final command to sway
-set $menu dmenu_path | dmenu | xargs swaymsg exec
+set $menu j4-dmenu-desktop --dmenu='bemenu -i --fn "Mono 12"' --term=$term
 
 ### Output configuration
 #
