--- a/config/sway/config
+++ b/config/sway/config
@@ -19,6 +19,9 @@ set $term termite
 # Note: it's recommended that you pass the final command to sway
 set $menu j4-dmenu-desktop --dmenu='bemenu -i --fn "Mono 12"' --term=$term
 
+# Your preferred locker
+set $lock swaylock -f -c 222222
+
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
@@ -83,6 +86,10 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
     # exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exit
+
+    # lock display
+    bindsym $mod+g exec $lock
+    bindsym $mod+Shift+g exec $lock & systemctl suspend 
 #
 # Moving around:
 #
