--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Adapta-Nokto
-gtk-icon-theme-name=Adwaita
+gtk-theme-name=Arc-Dark
+gtk-icon-theme-name=Arc
 gtk-font-name=Source Han Sans JP 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
