Update abcde config

--- a/.abcde.conf
+++ b/.abcde.conf
@@ -16,6 +16,7 @@ CDDBMETHOD=cddb
 # If you just wanted to use a proxy server, just set your http_proxy
 # environment variable - wget will use it correctly.
 #CDDBURL="http://freedb.freedb.org/~cddb/cddb.cgi"
+CDDBURL="http://freedbtest.dyndns.org:80/~cddb/cddb.cgi"
 
 # The CDDB protocol level.
 # Right now 5 is latin1 output and 6 is UTF8 encoding.
@@ -342,6 +343,7 @@ FLACOPTS="--silent --best --verify"
 # The variable CDPARANOIOPTS is also used by GNU's cd-paranoia,
 # so use this when setting CDROMREADERSYNTX=libcdio.
 #CDPARANOIAOPTS=
+CDPARANOIAOPTS="-O 6"
 #CDDA2WAVOPTS=
 #PIRDOPTS="-p"
 # Options for the CD ripper dagrab can be seen by running 'dagrab -h'.
@@ -380,6 +382,7 @@ FLACOPTS="--silent --best --verify"
 # The default action list (referenced as "default") is defined in the following
 # comment:
 #ACTIONS=cddb,read,encode,tag,move,clean
+ACTIONS=default,replaygain,embedalbumart,cue
 
 # CD device you want to read from
 # It can be defined as a singletrack flac file, but since it might change from
@@ -392,7 +395,7 @@ FLACOPTS="--silent --best --verify"
 # If you'd like to make a default location that overrides the current
 # directory for putting mp3's, uncomment this.
 #OUTPUTDIR=`pwd`
-OUTPUTDIR="${XDg_MUSIC_DIR:-$HOME/Music}"
+OUTPUTDIR="${XDG_MUSIC_DIR:-$HOME/Music}/RippedFiles"
 
 # Or if you'd just like to put the temporary .wav files somewhere else
 # you can specify that here
@@ -404,7 +407,7 @@ WAVOUTPUTDIR=/tmp
 # (e.g. "flac,mp3"). Currently recognised and supported are:
 # "flac", "m4a", "mp3, "mpc", "ogg", "opus", "mka", "spx", "vorbis", "wav", "wv", "ape", "aiff"
 #OUTPUTTYPE=ogg
-OUTPUTTYPE=flac,mp3
+OUTPUTTYPE=flac
 
 # Output filename format - change this to reflect your inner desire to
 # organize things differently than everyone else :)
@@ -417,14 +420,17 @@ OUTPUTTYPE=flac,mp3
 # to the files. Remove it from your user defined string if you are getting
 # files like ".ogg.ogg".
 #OUTPUTFORMAT='${ARTISTFILE}-${ALBUMFILE}/${TRACKNUM}.${TRACKFILE}'
-OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM} - ${TRACKFILE}'
+OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM} ${TRACKFILE}'
 
 # Like OUTPUTFORMAT but for Various Artists discs.
 #VAOUTPUTFORMAT='Various-${ALBUMFILE}/${TRACKNUM}.${ARTISTFILE}-${TRACKFILE}'
+VAOUTPUTFORMAT='Various Artists/${ALBUMFILE}/${TRACKNUM} ${TRACKFILE}'
 
 # Like OUTPUTFORMAT and VAOUTPUTFORMAT but for the ONEFILE rips.
 #ONETRACKOUTPUTFORMAT=$OUTPUTFORMAT
+ONETRACKOUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}${DISCNUMBER:+ Disc}${DISCNUMBER:-}'
 #VAONETRACKOUTPUTFORMAT=$VAOUTPUTFORMAT
+VAONETRACKOUTPUTFORMAT='Various Artists/${ALBUMFILE}${DISCNUMBER:+ Disc}${DISCNUMBER:-}'
 
 # Define how many encoders to run at once. This makes for huge speedups
 # on SMP systems. Defaults to 1. Equivalent to -j.
@@ -464,10 +470,11 @@ OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM} - ${TRACKFILE}'
 # For example use '--formats jpg;jpeg' to only search for JPEG images
 # These options: '--from <provider>' and '--lang <langcode>' might also be useful
 #GLYRCOPTS=
+GLYRCOPTS='--lang ja --from all'
 #ALBUMARTFILE="cover.jpg"
 #ALBUMARTTYPE="JPEG"
 ALBUMARTFILE="cover.png"
-ALBUMARTTYPE="PNG"
+ALBUMARTTYPE="png"
 
 # Options for ImageMagick commands used by album art processing when available
 # For example: CONVERTOPTS="-colorspace RGB -resize 600x600>"
@@ -491,6 +498,11 @@ ALBUMARTTYPE="PNG"
 #{
 #	echo "$@" | sed -e 's/^\.*//' -e 's/ /_/g' | tr -d ":><|*/\"'?[:cntrl:]"
 #}
+mungefilename ()
+{
+	echo "$@" | sed -e 's/^\.*//' | tr -d ":><|*/\"'?[:cntrl:]"
+}
+
 #
 # More examples for custom filename munging:
 #
@@ -588,6 +600,13 @@ ALBUMARTTYPE="PNG"
 #{
 #:
 #}
+post_read ()
+{
+    if [ ${ONETRACK} = "y"  -a ${OUTPUTTYPE} = "flac" ]; then
+        shnsplit -f ${ABCDETEMPDIR}/cue-*.txt "${ABCDETEMPDIR}/track1.wav" -t "verify%n" -d  "${ABCDETEMPDIR}"
+        arverify ${ABCDETEMPDIR}/verify*.wav  >&2
+    fi
+} 
 
 # post_encode
 # By default it does nothing.
@@ -601,6 +620,22 @@ ALBUMARTTYPE="PNG"
 #{
 #:
 #}
+post_encode ()
+{
+    DEST_DIR="${OUTPUTDIR}/${ARTISTFILE}/"
+    if [ ${ONETRACK} = "y" -a ${OUTPUTTYPE} = "flac" ]; then
+        metaflac \
+        --set-tag-from-file="CUESHEET=${DEST_DIR}/${ALBUMFILE}${DISCNUMBER:+ Disc}${DISCNUMBER:-}.flac.cue" \
+        "${DEST_DIR}/${ALBUMFILE}${DISCNUMBER:+ Disc}${DISCNUMBER:-}.flac"
+        rm "${ALBUMFILE}${DISCNUMBER:+ Disc}${DISCNUMBER:-}.flac.cue"
+        if [ -e "${DEST_DIR}/albumart_backup" ]; then
+            rm -r "${DEST_DIR}/albumart_backup"
+        fi
+        if [ -e "${DEST_DIR}/cover.png" ]; then
+            rm "${DEST_DIR}cover.png"
+        fi
+    fi
+}
 
 # If you'd like to have abcde eject the cdrom after all the tracks have been
 # read, uncomment the following line.
