Update video & music pkgs

--- a/.abcde.conf
+++ b/.abcde.conf
@@ -603,7 +603,7 @@ mungefilename ()
 post_read ()
 {
     if [ ${ONETRACK} = "y"  -a ${OUTPUTTYPE} = "flac" ]; then
-        shnsplit -f ${ABCDETEMPDIR}/cue-*.txt "${ABCDETEMPDIR}/track1.wav" -t "verify%n" -d  "${ABCDETEMPDIR}"
+        shnsplit -f ${ABCDETEMPDIR}/cue-*.txt ${ABCDETEMPDIR}/track*1.wav -t "verify%n" -d  "${ABCDETEMPDIR}"
         arverify ${ABCDETEMPDIR}/verify*.wav  >&2
     fi
 } 
